examples/mood/tests/fixtures/construct_struct_wrong_field_type.mood.expected
Error: Expected "i32", got "f64":
 --> construct_struct_wrong_field_type.mood:7:24

  | pub fn test(): i32 {
7 |     Foo { a: 1_i32, b: 1_f64 };
  |                        ^^^^^ This expression has the wrong type.
  |     0_i32
